// Protobuf definition for the SCAI Attribute Report predicate
// (predicateType = https://in-toto.io/attestation/scai/attribute-report/v0.2)
//
// Validation of all fields is left to the users of this proto.

syntax = "proto3";

package in_toto_attestation.predicates.scai.v0;

import "google/protobuf/struct.proto";
import "in_toto_attestation/v1/resource_descriptor.proto";

option go_package = "github.com/in-toto/attestation/go/predicates/scai/v0";
option java_package = "io.github.intoto.attestation.predicates.scai.v0";

message AttributeAssertion {

    string attribute = 1; // required

    in_toto_attestation.v1.ResourceDescriptor target = 2;

    google.protobuf.Struct conditions = 3;

    in_toto_attestation.v1.ResourceDescriptor evidence = 4;

}

message AttributeReport {

    repeated AttributeAssertion attributes = 1;

    in_toto_attestation.v1.ResourceDescriptor producer = 2;

}
